--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ sections = ["skills","publications","creations","contributions","experience","ed
 trackerID = "XX-123446-01"
 
 [[params.handles]]
-link = "www.linkedin.com/in/kishoreee"
+link = linkedin.com/in/kishoreee"
 name = "LinkedIn"
 
 [[params.handles]]
