--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ lastName = ""
 phone = "+91 9025084568"
 showSocializations = true
 showContact = false
-sections = ["skills","contributions","experience","education","blog"]
+sections = ["skills","education", "experience","contributions","creations","blog"]
 
 
 [params.google]
